# CCST

./: .env.example  .gitignore  Procfile  README.md  app.py  conda-requirements.txt  control.py  control_router.py  data.py  data_router.py  gnc_router.py  helper.py  main.py  nixpacks.toml  pathplanning.py  pyproject.toml  railway.json  requirements.txt
ccst/include/: python3.7m
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  page.tsx
frontend/components/: MatrixOutput.tsx  Terminal.tsx
frontend/lib/: api.ts  matrix-utils.ts
frontend/types/: terminal.ts
mpc/: MPC.h  Makefile  Makefile_old  omt.cpp  setup.py
nums/: AbstractDeSolver.cpp  AbstractDeSolver.h  AdaptiveRungeKuttaSolver.cpp  AdaptiveRungeKuttaSolver.hpp  BVPSolver.cpp  BVPSolver.h  CMakeLists.txt  Car.cpp  Car.h  CollocationSolver.cpp  CollocationSolver.h  DifferentialSystem.cpp  DifferentialSystem.h  FiniteDifferenceGrid.cpp  FiniteDifferenceGrid.h  Makefile  Node.h  OrbitTransfer.cpp  OrbitTransfer.h  PythonWrapper.cpp  RungeKuttaSolver.cpp  RungeKuttaSolver.h  main.cpp
scene_segmentation/: .floyddata  .floydexpt  helper.py  main.py  road_segmentation.py
static/css/: styles.css
templates/: CloudControlToolbox.html  base.html  calcresult.html
